Fix remember me checkbox button to align

--- a/app/assets/stylesheets/bootstrap_and_custom.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_custom.css.scss
@@ -23,3 +23,7 @@ $dropdown-link-hover-bg:		black;
 .navbar-brand {
      font-weight: bold;
 }
+
+.checkbox input[type="checkbox"] {
+  margin-left: 0;
+}
